# CPP_HW_3

./: CMakeLists.txt  main.cpp
headers/: Const.h  CusMatrix.h  FastFixed.h  Fixed.h  FixedImpl.h  InfoF.h  ParsingSettings.h  Simulator.h  TypeGen.h  VectorField.h
source/: InfoF.cpp  ParsingSettings.cpp
